--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.26.0",
     "bootstrap": "^3.3.6",
     "bootstrap-fileinput": "^5.2.7",
+    "bootstrap-icons": "^1.8.1",
     "html-react-parser": "^1.4.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
