--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "bootstrap": "^3.3.6",
     "bootstrap-fileinput": "^5.2.7",
     "bootstrap-icons": "^1.8.1",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "html-react-parser": "^1.4.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "redux": "^4.1.2",
     "web-vitals": "^2.1.4"
   },
