--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
-    "bootstrap": "^3.3.6",
+    "bootstrap": "^5.1.3",
     "bootstrap-fileinput": "^5.2.7",
     "bootstrap-icons": "^1.8.1",
     "draft-js": "^0.11.7",
@@ -20,6 +20,12 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
     "redux": "^4.1.2",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
